# libtaskmonitor

./: .clang  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  libtaskmonitor.pc.in
cmake/: Packing.cmake
config/: CMakeLists.txt  libtaskmonitor.pc.in
include/: Helpers.h  Helpers.h.in  IAsyncEnvelope.h  TaskMonitor.h.in  taskmonitor.h
proto/: Collector.proto  Control.proto  Envelope.proto  Monitor.proto
source/: CMakeLists.txt  EnvelopeReader.cpp  EnvelopeWriter.cpp  Helpers.cpp
